--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "framer-motion": "^12.23.24",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.553.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
